--- a/style/style.css
+++ b/style/style.css
@@ -122,7 +122,7 @@ h6 {
 /*eigenes CSS ############################################################################################## */
 /*headerbereich*/
 #headerbild {
-	background: url(http://127.0.0.4/~harald/niemeczek_at/1/images/headerbild.png) no-repeat;
+	background: url(/images/headerbild.png) no-repeat;
 	background-position: center center;
 	-webkit-background-position: center center;
 	-moz-background-position: center center;
