--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,3 @@
-/*https://medialoot.com/blog/how-to-create-a-responsive-navigation-menu-using-only-css/*/
-
 * {
 	margin: 0;
 	padding: 0;
@@ -13,17 +11,10 @@ body {
 	display: table;
 	width: 100%;
 }
-header{
-	background-color: rgb(48,53,53);
-	width: 100%;
-	float: left;
-	/*#######################################################################schatten unten*/
-	box-shadow: 1px 0 20px rgb(22,23,23); 
-}
 .tabellen_zelle {
 	display: table-row;
 }
-::selection {
+::selection { /*Farbe bei Markierung*/
 	background-color: rgba(62,122,5,0.9);
 }
 /* allgemeine Formatierung*/
@@ -42,16 +33,16 @@ a:visited {
 	color: rgb(54,107,4);
 
 }
-a:focus {
-	border: 1px rgb(78,154,6) dotted;
-}
-a:hover {
-	color: rgb(116,229,9); 
-	font-weight: bold;
 
+a:hover {
+
+	font-weight: bold;
+	text-decoration: underline;
 }
 a:active {
-	color: rgb(185,151,3);
+	color: rgb(116,229,9); 
+	border: none;
+	
 }
 
 
@@ -102,16 +93,14 @@ h6 {
 }
 
 
-
-
-
-
-
-
-
-
-
-#bereichlogo {
+/* ###################################################################################   headerbereich  ########### */
+header{ /* Gesamter Kopfbereich (Zeile mit Navigation oben) */
+	background-color: rgb(48,53,53);
+	width: 100%;
+	float: left;
+	box-shadow: 1px 0 20px rgb(22,23,23); 
+}
+#bereichlogo { 
 	color: rgb(230,232,232);
 	font-size: 23px;
 	display: block;
@@ -124,6 +113,9 @@ h6 {
 	#bereichlogo {
 		padding: 14px 12px 7px 40px;
 	}
+}
+#steuerung {
+	float: right;
 }
 #steuerung li {
 	list-style: none;
@@ -138,25 +130,50 @@ h6 {
 	text-decoration: none; 	/* keine Unterstreichung*/
 	color: rgb(175,178,178);       		/* Schriftfarbe weiß*/	
 }
-@media only screen and (max-width:700px) {
+@media only screen and (max-width:710px) {
 	#steuerung a {
 		padding-left: 50px;
 	}
+}
+#steuerung a:hover {
+	color: rgb(247,247,245);
+	background: rgb(53,59,59);
 }
 .menue-button {
 	display: none;
 }
 
 
-#steuerung {
-	float: right;
-}
-#steuerung a:hover {
-	color: rgb(247,247,245);
-	background: rgb(53,59,59);
-}
-/*eigenes CSS ############################################################################################## */
-/*headerbereich*/
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* ###################################################################################   Bild in Desktopansicht  ########### */
 #headerbild {
 	background: url(/images/system/headerbild-google-optimized.jpg) no-repeat;
 	background-position: center center;
@@ -171,8 +188,22 @@ h6 {
 	background-color: rgb(57,63,63);
 	height: 325px;
 }
+@media only screen and (max-width:510px) { /*Ausblenden des Headerbilds wenn zu schmal*/
+	#headerbild {
+		display: none;	
+		background: none;
+	}
+	#headerbildhintergrund {
+		display: none;
+	}
+}
+/* ###################################################################################       Inhaltsbereich      ########### */
 
-/*Inhaltbereich*/
+.maximale_hoehe { /* Höhenangabe Headerbild und Inhaltsbereich */
+	background-color: rgb(41,41,41);
+	height: 100%;
+
+}
 
 #content_area {
 	max-width: 1135px;
@@ -208,9 +239,6 @@ h6 {
 	margin: 0 2% 0 2%;
 }
 }
-
-
-
 .databox {
 	padding: 15px;
 	margin-bottom: 3em;
@@ -218,11 +246,10 @@ h6 {
 
 
 
-
+/* Sticky Footer ########################################################################################### */
 #steuerung_footer {
 	float: right;
 }
-
 #steuerung_footer li {
 	list-style: none;
 	float: left;
@@ -236,28 +263,12 @@ h6 {
 	color: white;       		/* Schriftfarbe weiß*/
 	border-top: 2px solid transparent;
 }
-
-
 #steuerung_footer a:hover {
 	color: rgb(238,238,236);
 	background: rgb(52,57,57);
 	border-top: 2px rgb(33,93,156) solid;
 }
 
-
-
-
-
-
-
-/* Sticky Footer ########################################################################################### */
-
-
-.maximale_hoehe {
-	background-color: rgb(41,41,41);
-	height: 100%;
-	min-height: 100px;
-	}
 #footer_height{
 	height: auto;
 	background-color: rgb(57,63,63);
@@ -288,7 +299,7 @@ h6 {
 		margin: 3px 2px 3px 2px;
 		border-radius: 2px;
 	}
-	#bereichlogo{
+	#bereichlogo{  
 		width: 100%;
 	}
 	#steuerung li {
@@ -313,22 +324,40 @@ h6 {
 		border-bottom: solid 1px rgb(71,74,73);
 		border-top: none;
 	}
-	
-	
-	/*eigenes CSS mobil ######################################################################################### */
-	#headerbild {
-		display: none;	
-		background: none;
-	}
-	#headerbildhintergrund {
-		display: none;
-	}
 }
 
 
 
+.hidden {
+	position: absolute;
+/*display: none;*/
+width: auto;
+min-width: 30px;
 
-
+background-color: red;
+}
+li ul li {
+	display: block;
+	float: none;
+}
+#testy1 {
+	color: yellow;
+	background-color: yellow;
+	float: none;
+	width: 100%;
+}
+#testy2 {
+	color: yellow;
+	background-color: yellow;
+	float: none;
+		width: 100%;
+}
+#testy3 {
+	color: yellow;
+	background-color: yellow;
+	float: none;
+	width: 100%;
+}
 
 
 
