--- a/style/min-style.css
+++ b/style/min-style.css
@@ -105,6 +105,19 @@ h6 {
 	text-decoration: underline;
 
 }
+.size10 {
+	font-size: 10;
+}
+.size15 {
+	font-size: 15;
+}
+.size20 {
+	font-size: 20;
+}
+.size25 {
+	font-size: 8mm;
+
+}
 .video-full {
 	width: 95%;
 	height: auto;
