--- a/style/min-style.css
+++ b/style/min-style.css
@@ -82,8 +82,9 @@ h6 {
 }
 blockquote {
 	color: rgb(228,228,226);
+	background-color: rgb(59,59,59);
 	font-size: 17px;
-	border: 1px solid rgb(228,228,226);
+	border-left: 5px solid rgb(78,154,6);
 	margin: 20px 5px 10px 12px;
 	padding: 10px;
 	
